fixed gap

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2482,7 +2482,7 @@ textarea {
         }
         
         @include media(768) {
-            gap: 8px;
+            gap: 12px;
             grid-template-columns: repeat(2, minmax(0, 1fr));
         }
 
@@ -2661,7 +2661,7 @@ textarea {
         }
         
         @include media(768) {
-            gap: 8px;
+            gap: 12px;
             grid-template-columns: repeat(2, minmax(0, 1fr));
         }
 
@@ -2741,7 +2741,7 @@ textarea {
         }
         
         @include media(768) {
-            gap: 8px;
+            gap: 12px;
             grid-template-columns: repeat(2, minmax(0, 1fr));
         }
 
@@ -2791,6 +2791,14 @@ textarea {
                 @include media(992) {
                     font-size: 10px;
                     line-height: 120%;
+                }
+            }
+
+            a {
+                @include media(520) {
+                    font-size: 12px;
+                    padding: 12px 12px;
+                    height: auto;
                 }
             }
         }
@@ -2927,7 +2935,7 @@ textarea {
         }
         
         @include media(768) {
-            gap: 8px;
+            gap: 12px;
             grid-template-columns: repeat(2, minmax(0, 1fr));
         }
     }
